--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
-  <link rel="icon" type="image/png" href="./assets/icons/filamed-icon.png">
+  <link rel="icon" type="image/png" href="assets/icons/filamed-azul-quadrado.png">
 
   <!-- add to homescreen for ios -->
   <meta name="mobile-web-app-capable" content="yes" />
