--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
 
   <link rel="icon" type="image/png" href="assets/icons/filamed-azul-quadrado.png">
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvQ8YamcGrMBGAp0cslVWSRhS5NXNEDcI&libraries=places,geometry"></script>
+
   <!-- add to homescreen for ios -->
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
