ajeitado mapa, hospital-service e home

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,17 @@
   <!-- add to homescreen for ios -->
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <script>
+    window.googleMapsCallback = function() {
+      window.mapsLoaded = true;
+    };
+  </script>
+  
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvQ8YamcGrMBGAp0cslVWSRhS5NXNEDcI&callback=googleMapsCallback&libraries=places,geometry">
+  </script>
+  
 </head>
 
 <body>
